update manual for hi <-> lo rom conversion and push version to 1.1

--- a/Advanced_SNES_ROM_Utility/Documents/Manual.html
+++ b/Advanced_SNES_ROM_Utility/Documents/Manual.html
@@ -1,4 +1,5 @@
-<h1><a name="top"></a><span style="font-family:Arial,Helvetica,sans-serif">Table of Contents</span>
+<h1>
+    <a name="top"></a><span style="font-family:Arial,Helvetica,sans-serif">Table of Contents</span>
 </h1>
 
 <ol>
@@ -14,6 +15,7 @@
     <li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:20px"><a href="#regionlock">Remove Region Locks</a></span></span></li>
     <li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:20px"><a href="#sramcheck">Remove SRAM Checks</a></span></span></li>
     <li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:20px"><a href="#slowcheck">Remove Slow ROM Checks</a></span></span></li>
+    <li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:20px"><a href="#convert-hi-lo">Convert HiROM &harr; LoROM</a></span></span></li>
     <li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:20px"><a href="#patch">Apply Patch</a></span></span></li>
     <li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:20px"><a href="#options">Options</a></span></span></li>
 </ol>
@@ -109,6 +111,11 @@
 <h1><a name="slowcheck" /><span style="font-family:Arial,Helvetica,sans-serif">Remove Slow ROM Checks</span></h1>
 
 <p><span style="font-family:Arial,Helvetica,sans-serif">Useful if you want to play your FastROMs on a copy station without FastROM support or burn them on (E)EPROMs slower than 120ns.</span></p>
+<a href="#top"><span style="font-family:Arial,Helvetica,sans-serif">go back</span></a>
+
+<h1><a name="convert-hi-lo" /><span style="font-family:Arial,Helvetica,sans-serif">Convert HiROM &harr; LoROM</span></h1>
+
+<p><span style="font-family:Arial,Helvetica,sans-serif">Switch ROM layout between HiROM and LoROM.</span></p>
 <a href="#top"><span style="font-family:Arial,Helvetica,sans-serif">go back</span></a>
 
 <h1><a name="patch" /><span style="font-family:Arial,Helvetica,sans-serif">Apply Patch</span></h1>
