add interleaving to manual

--- a/Advanced_SNES_ROM_Utility/Documents/Manual.html
+++ b/Advanced_SNES_ROM_Utility/Documents/Manual.html
@@ -12,6 +12,7 @@
     <li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:20px"><a href="#split">Split ROM</a></span></span></li>
     <li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:20px"><a href="#swapbin">SwapBin ROM</a></span></span></li>
     <li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:20px"><a href="#deinterleave">Deinterleave</a></span></span></li>
+    <li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:20px"><a href="#interleave">Interleave</a></span></span></li>
     <li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:20px"><a href="#regionlock">Remove Region Locks</a></span></span></li>
     <li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:20px"><a href="#sramcheck">Remove SRAM Checks</a></span></span></li>
     <li><span style="font-family:Arial,Helvetica,sans-serif"><span style="font-size:20px"><a href="#slowcheck">Remove Slow ROM Checks</a></span></span></li>
@@ -91,6 +92,11 @@
 <h1><a name="deinterleave" /><span style="font-family:Arial,Helvetica,sans-serif">Deinterleave</span></h1>
 
 <p><span style="font-family:Arial,Helvetica,sans-serif">Some copy stations like &quot;Game Doctor SF&quot; or &quot;Super UFO&quot; use interleaving when dumping HiROM games. This function will reverse this process. Please use ROMs with copy station header, unless you know which copy station was used!</span></p>
+<a href="#top"><span style="font-family:Arial,Helvetica,sans-serif">go back</span></a>
+
+<h1><a name="interleave" /><span style="font-family:Arial,Helvetica,sans-serif">Interleave</span></h1>
+
+<p><span style="font-family:Arial,Helvetica,sans-serif">Some patches or copy stations require interleaved ROMs. This function will interleave your ROM. If you have interleaved a ROM for patching and want to play it in an emulator or flashcard, don't forget to deinterleave and fix checksum after patching!</span></p>
 <a href="#top"><span style="font-family:Arial,Helvetica,sans-serif">go back</span></a>
 
 <h1><a name="regionlock" /><span style="font-family:Arial,Helvetica,sans-serif">Remove Region Locks</span></h1>
