--- a/Advanced_SNES_ROM_Utility/Documents/Manual.html
+++ b/Advanced_SNES_ROM_Utility/Documents/Manual.html
@@ -121,7 +121,7 @@
 
 <h1><a name="convert-hi-lo" /><span style="font-family:Arial,Helvetica,sans-serif">Convert HiROM &harr; LoROM</span></h1>
 
-<p><span style="font-family:Arial,Helvetica,sans-serif">Switch ROM layout between HiROM and LoROM.</span></p>
+<p><span style="font-family:Arial,Helvetica,sans-serif">Can switch ROM layout between HiROM and LoROM. If the ROM uses (S)RAM or some enhancement chips, you have to do some manual work after conversion. Converting from HiROM to LoROM only works, if the ROM was designed to be convertible.</span></p>
 <a href="#top"><span style="font-family:Arial,Helvetica,sans-serif">go back</span></a>
 
 <h1><a name="patch" /><span style="font-family:Arial,Helvetica,sans-serif">Apply Patch</span></h1>
