add some information to manual and fixed typo

--- a/Advanced_SNES_ROM_Utility/Documents/Manual.html
+++ b/Advanced_SNES_ROM_Utility/Documents/Manual.html
@@ -171,10 +171,11 @@
 <h1><a name="commandline" /><span style="font-family:Arial,Helvetica,sans-serif">Commandline (CLI)</span></h1>
 
 <p><span style="font-family:Arial,Helvetica,sans-serif">Use Windows Commandline (CMD) for executing batch operations (or just for processing a single file, if you prefer using the commandline).</span></p>
-<p><span style="font-family:Arial,Helvetica,sans-serif">Build your own chain of commands to execute operations in the order you specified!</span></p>
+<p><span style="font-family:Arial,Helvetica,sans-serif">Build your own command chain to execute operations in the order you specified!</span></p>
+<p><span style="font-family:Arial,Helvetica,sans-serif">Note: Deinterleaving and interleaving might require user action! This will bring up a windows form and can only work within a Windows environment!</span></p>
 <p><span style="font-family:Arial,Helvetica,sans-serif"><u>Example:</u></span></p>
 <p><span style="font-family:Consolas">Advanced_SNES_ROM_Utility -path "C:\ROMs" -recursive -header add -patch "C:\Patches\patch.ips" -header remove -fixromsize -fixchecksum</span></p>
-<p><span style="font-family:Arial,Helvetica,sans-serif">This command will add an header to all ROMs in C:\ROMs incl. subfolder, apply an IPS patch, remove header afterwards, fix internal ROM size and checksum and save the modfied file with an extension.</span></p>
+<p><span style="font-family:Arial,Helvetica,sans-serif">This command will add a header to all ROMs in C:\ROMs (subfolders included), apply an IPS patch, remove header afterwards, fix internal ROM size and checksum and save the modfied file with an extension.</span></p>
 <table border="0" style="font-family: Consolas">
     <tbody>
         <tr style="vertical-align:top">
