tiny but important correction in manual

--- a/Advanced_SNES_ROM_Utility/Documents/Manual.html
+++ b/Advanced_SNES_ROM_Utility/Documents/Manual.html
@@ -96,7 +96,7 @@
 <h1><a name="interleave" /><span style="font-family:Arial,Helvetica,sans-serif">Interleave</span></h1>
 
 <p><span style="font-family:Arial,Helvetica,sans-serif">Some patches or copy stations require interleaved ROMs. This function will interleave your ROM. If you have interleaved a ROM, patched it and want to play it in an emulator or flashcard, don't forget to deinterleave and fix checksum again!</span></p>
-<p><span style="font-family:Arial,Helvetica,sans-serif">Note: Only LoROMs can be interleaved!</span></p>
+<p><span style="font-family:Arial,Helvetica,sans-serif">Note: Only HiROMs can be interleaved!</span></p>
 <a href="#top"><span style="font-family:Arial,Helvetica,sans-serif">go back</span></a>
 
 <h1><a name="regionlock" /><span style="font-family:Arial,Helvetica,sans-serif">Remove Region Locks</span></h1>
